terraform/security.tf
resource "aws_security_group" "rds_sg" {
  name        = "mlog01-rds-sg"
  description = "Allow backend access to RDS"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = var.private_subnets
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = { Name = "mlog01-rds-sg" }
}
